# SoundSynthesis

./: .gitmodules  CMakeLists.txt  README.md
FFTEngineSounds/: Makefile  main.cpp
scripts/: run.sh
src/: CMakeLists.txt  main.cpp  main.hpp  main2.cpp
